package gamer.protocol;
import "player_cards_msg_protocol.proto";

message GameEndDataMsgProtocol {
  required int32 player_id           = 1;
  required string nick_name          = 2;
  optional int32 score_gold          = 3;
  optional int32 score_diamond       = 4;
  optional int32 total_score_gold    = 5;
  optional int32 total_score_diamond = 6;
  optional float rate_winning        = 7;
  optional int32 num_ming_gang       = 8;
  optional int32 num_an_gang         = 9;

  repeated PlayerCardsMsgProtocol player_cards		= 10;
}

message GameEndMsgProtocol {
  required int32 room_id			                = 1;
  required int32 room_owner_id		                = 2; 
  required int32 players_num  		                = 3;
  required int32 cur_round			                = 4;
  required int32 total_round	                    = 5;
  required int32 banker_id  		                = 6;
  
  repeated GameEndDataMsgProtocol game_end_data		= 7;
}